Fixed bug in css element causing an overflow, fixed a Js bug variable assigned null

--- a/assets/css/johndoe.css
+++ b/assets/css/johndoe.css
@@ -11632,7 +11632,9 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 
 .about-section {
   border-bottom: 1px solid #dee2e6;
-  
+  max-width: 100%;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .about-section .about-card {
